--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/template.css": "/css/template.css",
+    "/js/nprogress.js": "/js/nprogress.js",
     "/js/template.js": "/js/template.js"
 }
