Putting on to Pending State

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,24 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+# Custom
+APP_TITLE=XACS
+APP_TITLE_ABBREVIATION="Give Assignment > Check Assignment > Submit Assignment > Assis Assignment"
+APP_TITLE_SHORT="G A x C S"
+APP_SUBTITLE="Assignment Submission and Evaluation System"
+APP_VERSION="2"
+
+MIX_APP_TITLE=XACS
+MIX_APP_TITLE_ABBREVIATION="Give Assignment > Check Assignment > Submit Assignment > Assis Assignment"
+MIX_APP_TITLE_SHORT="G A x C S"
+MIX_APP_SUBTITLE="Assignment Submission and Evaluation System"
+MIX_APP_VERSION="2"
+
+RU_SECRET_KEY="***"
+
+SMS_SECRET_KEY=
+
+MIX_VUE_APP_ENDPOINT="Dev/assignment_v2/public"
+MIX_APP_AXIOS_PATH="./"
